<resources>
    <string name="app_name">WallPops</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_wallpops">Welcome to Wallpops</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_text">Login to your account</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_acc">Don\'t have an account? </string>
    <string name="create_one">Create one</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="give_your_details_to_register_with_us">Give your details to register with us!</string>
    <string name="sign_up">Sign up</string>
    <string name="your_name">Your Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="try_the_best_wallpaper_which_suites_your_personality">Try the best wallpaper which suites your personality</string>
    <string name="or">OR</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign in</string>
    <string name="google_client_id">447565071261-qu40vc0567jh6r7eva5t4v6lqu0kevor.apps.googleusercontent.com</string>
    <string name="google_client_secret">0yBcLzMujbRGwOgqqSmFZF5b</string>
</resources>