<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".LoginFragment"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/text1_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_above="@id/text2_login"
        style="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:layout_marginStart="24dp"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/text2_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:layout_above="@id/container_login"
        android:textStyle="bold"
        android:textColor="@color/colorTextSec"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="24dp"
        android:textSize="14sp"/>

    <RelativeLayout
        android:id="@+id/container_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_centerInParent="true"
        android:background="@drawable/backgroud_login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/text3_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:fontFamily="@font/nunito_sans_bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:textSize="24sp"
            android:textColor="@color/text_login"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3_login"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:startIconTint="@android:color/white"
            style="@style/EditText.Login"
            app:startIconDrawable="@drawable/email"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:backgroundTint="@android:color/white"
                style="@style/EditText.Login"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInput1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            app:startIconTint="@android:color/white"
            style="@style/EditText.Login"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingStart="10dp"
                style="@style/EditText.Login"
                android:backgroundTint="@android:color/white"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_below="@id/textInout2"
            android:textSize="16sp"
            android:layout_marginLeft="32sp"
            android:textColor="@color/text_login"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgetPasswordText"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:elevation="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_white"
            android:textColor="@color/colorBlk"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="18sp"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_login"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_acc"
            android:textColor="@color/colorTextSec"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/loginToRegisterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_one"
            android:fontFamily="@font/nunito_sans_bold"
            android:textColor="@color/container_color"
            android:textSize="16sp"/>

    </LinearLayout>


</RelativeLayout>