<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/text1_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        style="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:layout_marginTop="30dp"
        android:layout_marginStart="24dp"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/text2_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_your_details_to_register_with_us"
        android:textStyle="bold"
        android:textColor="@color/colorTextSec"
        android:layout_below="@id/text1_signup"
        android:layout_marginStart="24dp"
        android:textSize="14sp"/>

    <RelativeLayout
        android:id="@+id/container_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:paddingTop="15dp"
        android:paddingBottom="20dp"
        android:layout_centerInParent="true"
        android:background="@drawable/backgroud_signup"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/text3_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="@font/nunito_sans_bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:textSize="24sp"
            android:textColor="@color/text_login"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3_signup"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:startIconTint="@android:color/white"
            style="@style/EditText.Login"
            app:startIconDrawable="@drawable/user"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name"
                android:paddingStart="10dp"
                android:backgroundTint="@android:color/white"
                style="@style/EditText.Login"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInput1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            app:startIconTint="@android:color/white"
            style="@style/EditText.Login"
            app:startIconDrawable="@drawable/email"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:backgroundTint="@android:color/white"
                style="@style/EditText.Login"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInput2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            app:startIconTint="@android:color/white"
            style="@style/EditText.Login"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingStart="10dp"
                style="@style/EditText.Login"
                android:backgroundTint="@android:color/white"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInout3"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            app:startIconTint="@android:color/white"
            style="@style/EditText.Login"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordConfirmSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:paddingStart="10dp"
                style="@style/EditText.Login"
                android:backgroundTint="@android:color/white"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInout4"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_white"
            android:textColor="@color/colorBlk"
            android:elevation="5dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="18sp"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_signup"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorTextSec"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/resigsterToLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:fontFamily="@font/nunito_sans_bold"
            android:textColor="@color/container_color"
            android:textSize="16sp"/>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_below="@id/text2_signup"
        android:elevation="6dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@android:color/transparent"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/person"/>

</RelativeLayout>
