<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".AuthFragment">

   <ImageView
       android:id="@+id/svgImageView"
       android:layout_width="match_parent"
       android:layout_height="300dp"
       android:padding="33dp"
       android:src="@drawable/ic_svg"
       />

   <TextView
       android:id="@+id/authText1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:text="@string/try_the_best_wallpaper_which_suites_your_personality"
       android:layout_below="@id/svgImageView"
      android:fontFamily="@font/nunito_sans_bold"
      android:textColor="@color/colorText"
       android:textAlignment="center"
       android:layout_centerHorizontal="true"
       android:layout_margin="15dp"
       android:paddingLeft="20dp"
       android:paddingRight="20dp"
      android:textSize="20sp"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Join us to make it happen"
       android:layout_below="@id/authText1"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="-13dp"
       android:textColor="@color/colorTextSec"
       android:textAlignment="center"
       android:textSize="16sp"
       android:fontFamily="@font/nunito_sans_bold"
       />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:layout_above="@id/authOrContainer"
       android:layout_marginBottom="20dp"
       android:paddingBottom="5dp"
       android:paddingTop="5dp"
       android:paddingLeft="15dp"
       android:paddingRight="15dp"
       android:orientation="vertical"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp">

      <Button
          android:id="@+id/getStartedBtn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
         android:text="@string/get_started"
         android:background="@drawable/btn_blk"
          android:textAllCaps="false"
          android:textColor="@android:color/white"/>

      <Button
          android:id="@+id/loginBtnAuth"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/sign_in"
          android:textAllCaps="false"
          android:layout_marginTop="15dp"
          android:background="@drawable/btn_light_gry"/>

   </LinearLayout>

   <LinearLayout
       android:id="@+id/authOrContainer"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_above="@id/authBottomContainer"
       android:layout_marginBottom="25dp"
       android:layout_marginLeft="35dp"
       android:weightSum="5"
       android:layout_marginRight="35dp">

      <View
          android:layout_width="0dp"
          android:layout_height="1dp"
          android:layout_weight="2"
          android:layout_gravity="center_vertical"
         android:background="@color/colorText"/>

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
         android:text="@string/or"
         android:textSize="14sp"
          android:layout_weight="1"
          android:layout_gravity="center"
          android:gravity="center"
         android:textColor="@color/colorText"/>

      <View
          android:layout_width="0dp"
          android:layout_weight="2"
          android:layout_height="1dp"
          android:layout_gravity="center_vertical"
          android:background="@color/colorText"/>

   </LinearLayout>

   <LinearLayout
       android:id="@+id/authBottomContainer"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:gravity="center_horizontal"
       android:paddingBottom="30dp"
       android:orientation="horizontal">

      <ImageView
          android:id="@+id/googleLogin"
          android:layout_width="40dp"
          android:layout_height="40dp"
         android:src="@drawable/google"/>
      <ImageView
          android:id="@+id/fbLogin"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:src="@drawable/facebook"/>
      <ImageView
          android:id="@+id/twitterLogin"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:src="@drawable/twitter"/>

   </LinearLayout>

</RelativeLayout>